--- a/index.html
+++ b/index.html
@@ -8,23 +8,6 @@
     <link rel="stylesheet" href="assets/main.css" type="text/css" />
   </head>
 
-  <style type="text/css">
-
-  body {
-  font-size: 10pt;
-  font-family: monospace, times, Serif;
-  color:#085A0D;
-  text-decoration:blink;
-  background-color:white;
-  background-image: url("assets/images/main.jpg");
-  background-position:top right;
-  background-repeat: no-repeat;
-  background-origin:border-box;
-  background-size:contain；
-  }
-
-  </style>
-
   <body>
 
   <h2>
@@ -47,6 +30,10 @@
 
   <h2>Interview</h2>
   Coming soon!
+
+
+  <p class="title">  hello, world Σ( ° △ °|||)︴(～￣(OO)￣)ブ  (～￣(OO)￣)ブ  (～￣(OO)￣)ブ  (～￣(OO)￣)ブ (～￣(OO)￣)ブ  (～￣(OO)￣)ブ
+  <p>
 
 </body>
 	
