--- a/project-1/25_variations.html
+++ b/project-1/25_variations.html
@@ -29,7 +29,7 @@
         border-style:groove;
       
         border-width:340px;
-        border-color:#FFDDDA #FFC7CD #FFDDDA #FFDDDA ;
+        border-color:#EFF7FB #F6EFFB #FBEFF0 #EFFBF1 ;
 
 
       }
