--- a/project-1/variation_12.html
+++ b/project-1/variation_12.html
@@ -5,18 +5,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="assets/css/variation_12.css">
         <title>augusto de campos</title>
   </head>
-
-   <style>
-
-    body {
-      color:black;
-      font-family: "mono type", Courier, sarif;
-      background-color: white;
-      font-size: 1em
-      
-    </style>
 
   <body>
 
@@ -49,15 +40,15 @@
 
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 id="word">F</h1>
+<h1 id="word" span style="font-family: Arial; font-size:700px;"> F </h1></span>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 id="words">O</h1>
+<h1 id="words" span style="font-family: Arial; font-size:700px;"> O </h1> </span>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 id="wordss">R</h1>
+<h1 id="wordss" span style="font-family: Arial; font-size:700px;"> R </h1> </span>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 id="wordsss">M</h1>
+<h1 id="wordsss" span style="font-family: Arial; font-size:700px;"> M</h1> </span>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<h1 id="wordssss">A</h1>
+<h1 id="wordssss" span style="font-family: Arial; font-size:700px;"> A</h1> </span>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
