--- a/project-1/variation_19.html
+++ b/project-1/variation_19.html
@@ -16,10 +16,11 @@
       line-height: 30px;
       float: right;
       width: 500px;
-      font-size: 10px;
+      height: 300px;
+      font-size: 7.5px;
       color:grey;
       background: #DAE9FF;
-      box-shadow: 5px 5px 40px 40px white inset;
+      box-shadow: 5px 5px 90px 40px white inset;
     }
 
     p.section2 {
