--- a/project-1/variation_22.html
+++ b/project-1/variation_22.html
@@ -4,157 +4,50 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/nav.css">
     <title>augusto de campos</title>
+        <link rel="stylesheet" href="project-1/variation_22">
+        <link rel="stylesheet" href="assets/css/variation_22.css">
 
-    <style>
-
-    body {
-      margin: 89px;
-      color: #FF2E0A;
-      font-family: "Lucida Grande", Courier, Sans-sarif;
-      background-color: #D9D7C7;
-      font-size: 0.3em;
-
-
-      }
-
-    </style>
 
   </head>
 
-  <body>
-
-  <nav>
-   <a href="variation_21.html" class="back">&#8592;</a> 
-   |
-   <a href="variation_23.html" class="forward">&#8594;</a>
-</nav>
+<html>
 
 
-  <em>
-    FFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFormatFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    <br>
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-    FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF 
-    <br>
+<frameset rows="5%,80%">
 
-    <br><br><br>
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    REREREREREREREREREREREREREREREREREREREREformaRERERERERERERERERERERERERERERERERERERERERERERERER
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    <br>
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    <br>
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    <br>
-    RERERERERERERERERERERERERERERERERERERERERERERERERERERERERERERE
-    <br>
+  <frame src="variation_22/variation_15_1.html">
 
-    <br><br><br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISformaDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    DISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDISDIS
-    <br>
+<frameset rows="10%,40%">
 
-    <br><br><br>
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSformaTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS
-    TRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANSTRANS 
-    <br>
+ <frame src="variation_22/variation_15_2.html">
 
-    <br><br><br>
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    <br>
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCOformaCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    CONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCONCON
-    <br><br><br>
+<frameset cols="5%,30%">
 
+  <frame src="variation_22/variation_15_3.html">
 
-    <br>
-    INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININformaINININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ INININININININININININININININININININININININININININININININININININININININININININ 
-    <br><br><br><br><br></em>
+<frameset rows="20%,40%">
 
-    FORMA 
+  <frame src="variation_22/variation_15_4.html">
 
-   <p> <br><br><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Augusto de campos </p>
-    
+  <frameset cols="30%,40%">
 
-  </body>
+  <frame src="variation_22/variation_15_5.html">
+
+    <frameset rows="30%,20%">
+
+  <frame src="variation_22/variation_15_6.html">
+
+<frameset cols="30%,40%">
+
+  <frame src="variation_22/variation_15_7.html">
+
+<frameset rows="70%,2
+0%">
+
+  <frame src="variation_22/variation_15_8.html">
+
+</frameset>
 
 </html>
 
