--- a/project-1/variation_24.html
+++ b/project-1/variation_24.html
@@ -10,13 +10,14 @@
     <style>
 
     body {
-      margin: 200px;
-      color: #D6D2C4;
+      margin: 50px 300px 300px 200px;
+      color: #C7C4C1;
+      font-size: 10px;
       font-family: "Lucida Grande", Courier, Sans-sarif;
-      background-color: white;
-      font-size: 0.7em;
-
-
+      background-color:white;
+      background-image: url("assets/images/pink.png");
+      background-repeat: repeat-y;
+      background-size: 400px 300px;
       }
 
     </style>
