--- a/project-1/variation_14.html
+++ b/project-1/variation_14.html
@@ -15,6 +15,8 @@
       font-family: "mono type", Courier, sarif;
       background-color: white;
       font-size: 11pt;
+      background-image: url(assets/images/green.jpg);
+      
       
     </style>
 
