--- a/project-1/variation_02.html
+++ b/project-1/variation_02.html
@@ -29,11 +29,11 @@
 
   <body>
 
-  <nav>
+<p class="nav"> <nav>
    <a href="variation_01.html" class="back">&#8592;</a> 
    |
    <a href="variation_03.html" class="forward">&#8594;</a>
-</nav>
+</p>
 
    <p> formar </p>
    <p> reforma </p>
