--- a/project-1/variation_16.html
+++ b/project-1/variation_16.html
@@ -13,12 +13,9 @@
     body {
       color:black;
       font-family: "mono type", Courier, sarif;
-      background-color: #FFF8E5;
+      background-color: white;
       font-size: 12pt;
-      padding:1pt 90pt 30pt 300pt; 
-      background-image: url(assets/images/black.jpg); 
-      background-repeat: repeat; 
-      background-size: 30px 38px;   
+      padding:1pt 90pt 30pt 300pt;  
     </style>
 
   <body>
