--- a/project-1/variation_02.html
+++ b/project-1/variation_02.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/nav.css">
         <title>augusto de campos</title>
 
+        <nav>
+   <a href="variation_01.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_03.html" class="forward">&#8594;</a>
+</nav>
+
+
     <style>
 
     body {
@@ -28,12 +35,6 @@
   </head>
 
   <body>
-
-<p class="nav"> <nav>
-   <a href="variation_01.html" class="back">&#8592;</a> 
-   |
-   <a href="variation_03.html" class="forward">&#8594;</a>
-</p>
 
    <p> formar </p>
    <p> reforma </p>
