--- a/project-1/variation_23.html
+++ b/project-1/variation_23.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="css/nav.css">
     <title>augusto de campos</title>
 
+
+<nav>
+
+   <a href="variation_22.html" class="back">&#8592;</a> 
+   |
+   <a href="variation_24.html" class="forward">&#8594;</a>
+
+</nav>
+
+
     <style>
 
     body {
@@ -63,14 +73,6 @@
 
 
   <body>
-
-<p class="nav">
-
-   <a href="variation_22.html" class="back">&#8592;</a> 
-   |
-   <a href="variation_24.html" class="forward">&#8594;</a>
-
-</p>
 
 
 <p class="poem"> 
