--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <li><a href="classwork/carl-dier-style.html">Markup Carl Dier  ☆  </a></li>
     <li><a href="classwork/carl-dier-style-2.html">Carl Deir CSS Exercise  ★   </a></li>
     <li><a href="codingfromlife/coding-from-life.html">Coding From Life  〓   </a></li>
+
   </ul>
 
   <h2>Projects</h2>
   <ul>
   	<li> <a href="https://www.instagram.com/z_a_b_c_d_e/"> Visual Translation  ◐↔◑  </a></li>
     <li> <a href="project-1/25_variations.html">25 Variations ▩ </a></li>
+    <li> <a href="project-3/type.html">Css typeface ⭕️ </a></li>
   </ul>
 
   <h2>Interview</h2>
