--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <ul>
   	<li> <a href="https://www.instagram.com/z_a_b_c_d_e/"> Visual Translation  ◐↔◑  </a></li>
     <li> <a href="project-1/25_variations.html">25 Variations ▩ </a></li>
-    <li> <a href="project-3/type.html">Css typeface ⭕️ </a></li>
+    <li> <a href="project-3/csstypeface.html">Css typeface ⭕️ </a></li>
   </ul>
 
   <h2>Interview</h2>
