--- a/project-3/csstypeface.html
+++ b/project-3/csstypeface.html
@@ -43,7 +43,7 @@
   <ul>
   	<li><a href="firstsketch.html"> First sketch (three directions) </a></li>
     <li><a href="secondsketch.html">Second sketch (full alphabet)  </a></li>
-    <li><a href="variation_03.html">Working website </a></li>
+    <li><a href="Workingwebsite.html">Working website </a></li>
     <li><a href="variation_04.html">Final website </a></li>
   </ul>
 
