--- a/project-3/csstypeface.html
+++ b/project-3/csstypeface.html
@@ -44,7 +44,7 @@
   	<li><a href="firstsketch.html"> First sketch (three directions) </a></li>
     <li><a href="secondsketch.html">Second sketch (full alphabet)  </a></li>
     <li><a href="Workingwebsite.html">Working website </a></li>
-    <li><a href="variation_04.html">Final website </a></li>
+    <li><a href="finalwebsite.html">Final website </a></li>
   </ul>
 
 
