--- a/project-3/firstsketch.html
+++ b/project-3/firstsketch.html
@@ -2,10 +2,28 @@
 <html>
 <head>
   <title>firstsketch</title>
+
+  <style>
+
+  	html, body { height: 100%; }
+
+  	body {
+  		background: rgb(38,38,38);
+  		margin: 0;
+  	}
+
+  </style>
+
   </head>
 
 
-  <body style="background-color: rgb(38,38,38); height: 100%; width: 100%; overflow: hidden; margin: 0"><embed width="100%" height="100%" name="plugin" id="plugin" src="interactive/project-3/type.pdf" type="application/pdf" internalinstanceid="39"></body>
+  <body>
+
+  <!-- <embed width="100%" height="100%" name="plugin" id="plugin" src="type.pdf" type="application/pdf" internalinstanceid="39"> -->
+
+  <iframe src="type.pdf" width="100%" height="100%" frameborder="0"></iframe>
+
+  </body>
 
 
 </html>
