--- a/project-3/finalwebsite.html
+++ b/project-3/finalwebsite.html
@@ -48,7 +48,7 @@ random_imglink()
 <body>
 
 <form class="border">
- <span style="font-family:'Helvetica', sans-serif; font-size:8px;">OCCUPY.tff</span> &nbsp; OCCUPY.tff &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="font-family:'Helvetica', sans-serif;font-size:10px;">answer it ignore it copy it feel it redefine it fill it delate it translate it imagine it destory it build it refresh it occupy it </span> 
+ <span style="font-family:'Helvetica', sans-serif; font-size:8px;">OCCUPY.tff</span> &nbsp; OCCUPY.tff &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="font-family:'Helvetica', sans-serif;font-size:10px;">answer it ignore it copy it feel it redefine it fill it delate it translate it imagine it destory it build it refresh it occupy it </span> 
 
 <textarea rows="50" cols="105">
 
